--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -75,6 +75,10 @@ nav {
 
 // =================================HEADER==============================
 .header {
+	&__burger {
+		display: none;
+	}
+
 	&__left-content {
 		max-width: 590px;
 		width: 100%;
@@ -900,7 +904,114 @@ footer {
 	}
 
 	// =====================HEADER========================
+	.burger-bg {
+		position: relative;
+	}
+	.burger-bg:before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 100px;
+			background-color: $black-bgcolor;
+			opacity: 0.8;
+	}
+
 	.header {
+		&__nav {
+			position: fixed;
+			top: -200%;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			background-color: grey;
+			z-index: 3;
+			transition: all .3s ease;
+
+			nav {
+				background-color: transparent;
+				margin-top: 100px;
+
+				a {
+					display: block;
+					font-size: 20px;
+				}
+			}
+
+			&.active {
+				top: 0;
+			}
+		}
+
+		&__nav:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100px;
+			background-color: $black-bgcolor;
+		}
+
+		
+
+		&__burger {
+			display: flex;
+			position: relative;
+			width: 30px;
+			height: 20px;
+			z-index: 5;
+			margin: 35px 10px 0 auto;
+			transition: all .3s ease;
+
+			&:after, &:before {
+				content: "";
+				background-color: $nav-text-color;
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				left: 0;
+				transition: all .3s linear;
+			} 
+
+			&:before {
+				top: 0;
+			}
+
+			&:after {
+				bottom: 0;
+			}
+
+			&.active {
+				margin: 8px 10px 0 auto;
+				span {
+					transform: scale(0);
+				}
+				
+			} 
+
+			&.active:before {
+				transform: rotate(45deg);
+				top: 9px;
+			} 
+
+			&.active:after {
+				transform: rotate(-45deg);
+				bottom: 9px;
+			} 
+
+
+			span {
+				position: absolute;
+				background-color: $nav-text-color;
+				width: 100%;
+				height: 2px;
+				left: 0;
+				top: 9px;
+				transition: all .3s linear;
+			}
+		}
+
 		&__title {
 			font-size: 45px;
 			margin: 60px 0 20px 0;
@@ -1008,6 +1119,10 @@ footer {
 @media (max-width: "430px") {
 	.container {
 		padding: 50px 10px 40px 10px;
+
+		&--header {
+			padding: 10px 10px 40px 10px;
+		}
 	}
 	//======================BUTTON=========================
 	.btn {
