--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ nav {
   nav a:hover {
     background-color: #ff3f40; }
 
+.header__burger {
+  display: none; }
+
 .header__left-content {
   max-width: 590px;
   width: 100%; }
@@ -785,6 +788,95 @@ footer {
       padding: 29px 10px 80px 10px; }
     .container-footer {
       padding: 30px 10px 30px 10px; }
+  .burger-bg {
+    position: relative; }
+  .burger-bg:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    background-color: #000000;
+    opacity: 0.8; }
+  .header__nav {
+    position: fixed;
+    top: -200%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: grey;
+    z-index: 3;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease; }
+    .header__nav nav {
+      background-color: transparent;
+      margin-top: 100px; }
+      .header__nav nav a {
+        display: block;
+        font-size: 20px; }
+    .header__nav.active {
+      top: 0; }
+  .header__nav:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #000000; }
+  .header__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 5;
+    margin: 35px 10px 0 auto;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease; }
+    .header__burger:after, .header__burger:before {
+      content: "";
+      background-color: #e0e0e0;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      -webkit-transition: all .3s linear;
+      -o-transition: all .3s linear;
+      transition: all .3s linear; }
+    .header__burger:before {
+      top: 0; }
+    .header__burger:after {
+      bottom: 0; }
+    .header__burger.active {
+      margin: 8px 10px 0 auto; }
+      .header__burger.active span {
+        -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+        transform: scale(0); }
+    .header__burger.active:before {
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      top: 9px; }
+    .header__burger.active:after {
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+      bottom: 9px; }
+    .header__burger span {
+      position: absolute;
+      background-color: #e0e0e0;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      top: 9px;
+      -webkit-transition: all .3s linear;
+      -o-transition: all .3s linear;
+      transition: all .3s linear; }
   .header__title {
     font-size: 45px;
     margin: 60px 0 20px 0; }
@@ -847,6 +939,8 @@ footer {
 @media (max-width: 430px) {
   .container {
     padding: 50px 10px 40px 10px; }
+    .container--header {
+      padding: 10px 10px 40px 10px; }
   .btn {
     line-height: 25px; }
   .header__title {
