--- a/css/style.css
+++ b/css/style.css
@@ -943,6 +943,8 @@ footer {
       padding: 10px 10px 40px 10px; }
   .btn {
     line-height: 25px; }
+  .header__burger.active {
+    margin: 27px 10px 0 auto; }
   .header__title {
     font-size: 35px;
     line-height: 55px; }
